# robotarm

./: .gitignore  red_b.py  ros_gui_3.py  ros_gui_4.py  test_movement.py
GUIVision/: UI_CODVision1.py  UI_TESTTING.py  UI_TESTTING.ui  gui_main.py  main.py  newgui.py  ros_gui.ui  ros_gui_2.ui  ros_gui_cv.py  ros_gui_yolo.py  ros_operations.py  video_thread.py
PROJECT_MOTOR/: New Text Document.bat  UI_CODE copy 2.py  UI_CODE copy.py  UI_CODE.py  UI_CODEpack.py  UI_CODEpackApp copy.py  UI_CODEpackApp.py  UI_CODVision.py  UI_CODVision1.py  UI_TESTTING.py  UI_TESTTING.ui  tesdt.py
Vision/: V1.py  V10.py  V11.py  V2.py  V3.py  V4.py  V5.py  V6.py  V7.py  V8.py  V9.py  Vision_Ver7.py
calibration/: cam_calibrate.py  compare_calibration.py
robotarm_gui/: aruco_markers_detect.py  auto_pnp_thread.py  calibration_points.json.bak  color_detection.py  gui_init.py  jog_controls.py  main.py  move_robot_thread.py  pnp2.py  pnp2_bak.py  robot_control.py  ros_gui.py  ros_gui_2.py  ros_gui_2.ui  ros_gui_3.py  ros_gui_3.ui  ros_gui_4.py  ros_gui_4.ui  ros_gui_cv.py  test_detection.py  test_movement.py  video_thread.py
robotarm_gui/cal_points/: calibration_points.json  calibration_points.json.bak2  realsense_calibration.pkl
robotarm_gui/controls/: move_robot_thread.py  robot_controller.py
robotarm_gui/gui/: gui_init.py
robotarm_gui/utils/: coordinate_converter.py
robotarm_gui/video/: color_detection.py  detect_basket.py  video_thread.py
src/arduinobot_controller/: CMakeLists.txt  cartesianbot_controller.xml
src/arduinobot_controller/arduinobot_controller/: slider_control.py
src/arduinobot_controller/config/: arduinobot_controllers.yaml
src/arduinobot_controller/launch/: controller.launch.py
src/arduinobot_controller/src/: arduinobot_interface.cpp  arduinobot_interface.cpp.bak  backup.cpp  cartesianbot_interface.cpp  cartesianbot_interface_2.cpp  slider_control.cpp
src/arduinobot_description/meshes/: y_Link.STL  (+1 more)
src/arduinobot_msgs/: CMakeLists.txt
src/arduinobot_py_examples/: setup.py
src/arduinobot_remote/: CMakeLists.txt
src/arm/: package.xml  setup.py
src/arm_bringup/: package.xml
src/arm_controller/: CMakeLists.txt  arm_controller.xml  package.xml
src/arm_controller/arm_controller/: slider_control.py
src/arm_controller/config/: controllers.yaml
src/arm_controller/include/arm_controller/: arm_interface.hpp
src/arm_controller/launch/: controller.launch.py  slider_controller.launch.py
src/arm_controller/src/: arm_interface.cpp  slider_control.cpp
src/arm_cpp/: CMakeLists.txt  package.xml
src/arm_description/: CMakeLists.txt  package.xml
src/arm_firmware/: CMakeLists.txt  package.xml
src/arm_firmware/arm_firmware/: simple_serial_receiver.py  simple_serial_transmitter.py  stepper.py  stepper2.py
src/arm_firmware/firmware/3axis/: 3axis.ino
src/arm_firmware/firmware/simple_serial_receiver/: simple_serial_receiver.ino
src/arm_firmware/firmware/simple_serial_transmitter/: simple_serial_transmitter.ino
src/arm_firmware/firmware/stepper/stepper_motor/: stepper_motor.ino
src/arm_firmware/firmware/stepper2/: stepper_motor2.ino
src/arm_firmware/firmware/steppertest/: steppertest.ino
src/arm_moveit/: CMakeLists.txt  package.xml
test/: aruco_detect_test.py  aruco_test.py  cam_test.py  interpolation_test.py  rectangle_test.py  test_detection.py  xcb_test.py
test/detection/: aruco_detector.py  black_detector.py  red_basket_detector.py  red_detector.py  white_detector.py
test/vision/: Vision_Ver7.py  obj_follow_static.py
vision/: V8.py  Vision_Ver7.py  obj_follow_acc.py  obj_follow_static.py  test.py
(+88 files in other folders)
